--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>307 Tagged Open Ruby Bugs as of 2021-10-07 00:59:32 +0900</title>
+<title>306 Tagged Open Ruby Bugs as of 2021-10-08 01:38:39 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -31,9 +31,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">307</span> matched)
+(<span id="matched">306</span> matched)
 <table>
-<caption>307 Tagged Open Ruby Bugs as of 2021-10-07 00:59:32 +0900</caption>
+<caption>306 Tagged Open Ruby Bugs as of 2021-10-08 01:38:39 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,18 +42,25 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" notbug parser ">
-<td><a href="https://bugs.ruby-lang.org/issues/18242">18242</a>
-</td>
-<td>notbug parser</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18242">Parser makes multiple assignment sad in confusing way</a>
-</td>
-</tr>
 <tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/18234">18234</a>
+<td><a href="https://bugs.ruby-lang.org/issues/18245">18245</a>
 </td>
 <td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18234">exit after `binding.irb`</a>
+<td><a href="https://bugs.ruby-lang.org/issues/18245">CSV Parser, buffer overflow issue with very specific data</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18244">18244</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18244">Unexpected errors output order</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/18243">18243</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18243">Ractor.make_shareable does not freeze the receiver of a Proc but allows accessing ivars of it</a>
 </td>
 </tr>
 <tr class=" ractor ">
@@ -61,13 +68,6 @@
 </td>
 <td>ractor</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18232">Ractor.make_shareable is broken in code loaded with RubyVM::InstructionSequence.load_from_binary</a>
-</td>
-</tr>
-<tr class=" notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/18230">18230</a>
-</td>
-<td>notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18230">i get unexpected @path error.</a>
 </td>
 </tr>
 <tr class=" ractor ">
@@ -334,13 +334,6 @@
 </td>
 <td>ractor</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18024">Ractor crashes when connections are closed in multiple Ractors</a>
-</td>
-</tr>
-<tr class=" ractor ">
-<td><a href="https://bugs.ruby-lang.org/issues/18023">18023</a>
-</td>
-<td>ractor</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18023">Ractor#make_shareable changes the values of closured shareable objects</a>
 </td>
 </tr>
 <tr class=" refine ">
