--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>300 Tagged Open Ruby Bugs as of 2021-10-13 02:40:13 +0900</title>
+<title>299 Tagged Open Ruby Bugs as of 2021-10-15 04:59:45 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -31,9 +31,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">300</span> matched)
+(<span id="matched">299</span> matched)
 <table>
-<caption>300 Tagged Open Ruby Bugs as of 2021-10-13 02:40:13 +0900</caption>
+<caption>299 Tagged Open Ruby Bugs as of 2021-10-15 04:59:45 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +42,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18250">18250</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18250">Anonymous variables seem to break `Ractor.make_shareable`</a>
+</td>
+</tr>
 <tr class=" build maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/18249">18249</a>
 </td>
@@ -292,13 +299,6 @@
 </td>
 <td>os/arch build notbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18049">Cannot build ruby-3.0.2 on NetBSD</a>
-</td>
-</tr>
-<tr class=" notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/18041">18041</a>
-</td>
-<td>notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18041">[BUG] Segmentation fault - ruby 2.5.8p224 (2020-03-31 revision 67882) [aarch64-linux]</a>
 </td>
 </tr>
 <tr class=" fiber ">
@@ -1195,13 +1195,6 @@
 </td>
 <td>win test</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15247">Windows - TEMP folder, non 8.3 &amp; drive, fails &amp; errors in test-all (ruby &amp; rdoc)</a>
-</td>
-</tr>
-<tr class=" patch win  ">
-<td><a href="https://bugs.ruby-lang.org/issues/15204">15204</a>
-</td>
-<td>patch win </td>
-<td><a href="https://bugs.ruby-lang.org/issues/15204">globbing should be prevented when wildcard is surrounded by double quotes in the ruby&#39;s command line</a>
 </td>
 </tr>
 <tr class=" cygwin lib ">
