--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>297 Tagged Open Ruby Bugs as of 2021-10-26 03:28:14 +0900</title>
+<title>298 Tagged Open Ruby Bugs as of 2021-10-28 01:33:45 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -20,8 +20,8 @@
 <input type="submit" value="encoding" />
 <input type="submit" value="regexp" />
 <input type="submit" value="perf" />
-<input type="submit" value="tracepoint" />
 <input type="submit" value="fiber" />
+<input type="submit" value="tracepoint" />
 <input type="submit" value="mjit" />
 <input type="submit" value="autoload" />
 <input type="submit" value="parser" />
@@ -32,9 +32,9 @@
 <input type="submit" value="yjit" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">297</span> matched)
+(<span id="matched">298</span> matched)
 <table>
-<caption>297 Tagged Open Ruby Bugs as of 2021-10-26 03:28:14 +0900</caption>
+<caption>298 Tagged Open Ruby Bugs as of 2021-10-28 01:33:45 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -43,17 +43,24 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" patch tracepoint ">
-<td><a href="https://bugs.ruby-lang.org/issues/18264">18264</a>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18269">18269</a>
 </td>
-<td>patch tracepoint</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18264">TracePoint leaks memory</a>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18269">trace_opt_not and trace_opt_regexpmatch2 insns are indistinguishable</a>
 </td>
 </tr>
-<tr class=" yjit ">
+<tr class=" notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/18267">18267</a>
+</td>
+<td>notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18267">Argument forwarding requires parenthesis on method definitions</a>
+</td>
+</tr>
+<tr class=" patch yjit ">
 <td><a href="https://bugs.ruby-lang.org/issues/18260">18260</a>
 </td>
-<td>yjit</td>
+<td>patch yjit</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18260">YJIT uses insecure mmap protections</a>
 </td>
 </tr>
