--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>302 Tagged Open Ruby Bugs as of 2021-11-05 00:10:15 +0900</title>
+<title>305 Tagged Open Ruby Bugs as of 2021-11-09 06:26:49 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -31,9 +31,9 @@
 <input type="submit" value="yjit" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">302</span> matched)
+(<span id="matched">305</span> matched)
 <table>
-<caption>302 Tagged Open Ruby Bugs as of 2021-11-05 00:10:15 +0900</caption>
+<caption>305 Tagged Open Ruby Bugs as of 2021-11-09 06:26:49 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +42,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" regexp ">
+<td><a href="https://bugs.ruby-lang.org/issues/18294">18294</a>
+</td>
+<td>regexp</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18294">error when parsing regexp comment</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18293">18293</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18293">Time.at in master branch was 25% slower then Ruby 3.0</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18292">18292</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18292">3.1.0-dev `include` cause Module to be marked as initialized</a>
+</td>
+</tr>
 <tr class=" os/arch ">
 <td><a href="https://bugs.ruby-lang.org/issues/18286">18286</a>
 </td>
